# course_work

./: CMakeLists.txt  FootballClub.cpp  FootballClub.h  FootballSeasons.h  Human.h  Magazine.cpp  Magazine.h  MyEvent.h  News.cpp  News.h  magazine.cpp  magazine.h  main.cpp  stdafx.h
MyFunctional/Event/: Functions.h  MyEvent.h
functional/: News.cpp  News.h
people/: Human.h  User.cpp  User.h
